--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fontsource/inter": "^5.0.20",
     "@fontsource/poppins": "^5.0.15",
     "date-fns": "^3.6.0",
+    "html5-qrcode": "^2.3.8",
+    "jsqr": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
